# opencode-001

./: README.md
my-awesome-app/: .env.example  .gitignore  README.md  docker-compose.yml
my-awesome-app/.specify/memory/: constitution.md  project-memory.md
my-awesome-app/.specify/templates/: plan-template.md  tasks-template.md
my-awesome-app/backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
my-awesome-app/backend/alembic/: env.py
my-awesome-app/backend/alembic/versions/: 001_create_users_and_login_logs.py  001_create_users_and_login_logs.sql  002_seed_admin_user.py
my-awesome-app/backend/app/: config.py  database.py  main.py
my-awesome-app/backend/app/core/: permissions.py
my-awesome-app/backend/app/crud/: base.py  log.py  user.py
my-awesome-app/backend/app/middleware/: auth.py  logging.py
my-awesome-app/backend/app/models/: __init__.py  base.py  department.py  login_log.py  menu.py  operation_log.py  position.py  role.py  role_menu.py  user.py  user_role.py
my-awesome-app/backend/app/routers/: auth.py
my-awesome-app/backend/app/schemas/: auth.py  common.py  user.py
my-awesome-app/backend/app/utils/: captcha.py  file_storage.py  redis_client.py  security.py
my-awesome-app/backend/tests/: conftest.py
my-awesome-app/backend/tests/api/: test_auth.py
my-awesome-app/backend/tests/unit/: test_captcha.py  test_security.py
my-awesome-app/frontend/: .eslintrc.cjs  .gitignore  index.html  package.json  vite.config.ts
specs/001-rbac-admin-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+15 files in other folders)
